# course_project2_OOP

./: README.md  main.py  pyproject.toml
data/: base_file_handler.py  json_handler.py  vacancies.json
src/: base_api_class.py  head_hunter_api.py  vacancies.py
tests/: conftest.py  test_head_hunter_api.py  test_json_handler.py  test_utils_func.py  test_vacancies.py
utils/: utils_func.py
